# assitant_ia

./: .env.example  README.md  pyproject.toml  requirements.txt
src/academic_assistant/: __init__.py  assistant.py  cli.py  config.py  pdf_loader.py  research_apis.py
tests/: __init__.py  test_assistant.py  test_pdf_loader.py  test_research_apis.py
